--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
     "connect-flash-plus": "^0.2.1",
+    "dompurify": "^3.2.6",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "jsdom": "^26.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
